<resources>
    <string name="app_name">Food Saviour</string>
    <string name="user_details">Enter user details</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="email">Email Id</string>
    <string name="pswrd">Password</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone Number</string>
    <string name="employ_id">Employee ID</string>
    <string name="breakfast">Breakfast</string>
    <string name="suggestions_text">Suggest</string>
    <string name="improve">Help Us Improve</string>
    <string name="suggestion_title">Enter a suggestion title</string>
    <string name="suggestions_content">Enter your suggestions</string>
    <string name="issue_type">Issue Type</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="staff">Staff</string>
    <string name="food_quality">Food Quality</string>
    <string name="ambience">Ambience</string>
    <string name="back">back</string>
    <string name="submit">submit</string>
    <string name="edit">edit</string>
    <string name="overall_experience">Overall Experience</string>
    <string name="feedback">Feedback</string>
    <string name="good">How good do we cook?</string>
    <string name="average">Average</string>
    <string name="lunch">Lunch</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="good_">Good</string>
    <string name="delecious">Delicious</string>
    <string name="comments">Any Comments?</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="rno">Roll Number</string>

    <string name="room_no">Room Number</string>
    <string name="select_meal">Select your meal for the day</string>
    <string name="dashboard">Dashboard</string>
    <string name="meals">Meals</string>
    <string name="menu">Menu</string>
    <string name="suggestions">Suggestions</string>
    <string name="communicate">Communicate</string>
    <string name="user_name">username</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="friday">Friday</string>
    <string name="item_1">Pao Bhaji, Tea, Milk</string>
    <string name="item_2">Rajma, Rice, Roti, Aaloo Sabzi, Raita</string>
    <string name="item_3">Samosa, Tea, Coffee</string>
    <string name="item_4">Dal, Rice, Roti, Paneer Sabzi, Icecream</string>
    <string name="branch">Branch</string>
    <string name="hostel">Hostel</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="dwarf_start">DWARFSTAR STUDIOS</string>
    <string name="home">Home</string>
    <string name="student_id">Student ID</string>
    <string name="review_avg">Average</string>
    <string name="review_good">Good</string>
    <string name="review_del">Delicious</string>
    <string name="tagline">Saving the craving for future</string>
</resources>
