<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/home_grey"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/home_grey"
            android:title="@string/meals" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/home_grey"
            android:title="@string/menu" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/home_grey"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_suggestions"
                android:icon="@drawable/home_grey"
                android:title="@string/suggestions" />
        </menu>
    </item>

</menu>
