<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radio_brkfast_avg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/review_avg"
        android:textAllCaps="false"
        android:textColor="@color/peach"
        android:textSize="20sp"
        android:textStyle="normal" />

    <RadioButton
        android:id="@+id/radio_brkfast_good"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/review_good"
        android:textAllCaps="false"
        android:textColor="@color/peach"
        android:textSize="20sp"
        android:textStyle="normal" />

    <RadioButton
        android:id="@+id/radio_brkfast_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/review_del"
        android:textAllCaps="false"
        android:textColor="@color/peach"
        android:textSize="20sp"
        android:textStyle="normal" />
</RadioGroup>
