<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/gradient2"
    android:padding="16dp"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/profile"/>


    <TextView
        android:id="@+id/user_name"
        android:layout_toEndOf="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />
    <TextView
        android:id="@+id/user_rno"
        android:layout_toEndOf="@+id/profile_pic"
        android:layout_below="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/rno"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/user_branch"
        android:layout_toEndOf="@+id/profile_pic"
        android:layout_below="@+id/user_rno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/branch"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textAlignment="center"
        />
</RelativeLayout>